--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -3,18 +3,15 @@
   --border-button: solid 1px #888;
 }
 
-.keyboard {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(5, 48px);
-}
-
 .button {
   font-size: 1.4rem;
   background-color: var(--bg-button);
+  
   border: none;
+  border-radius: 0;
   border-right: var(--border-button);
   border-bottom: var(--border-button);
+  
   outline: none;
   cursor: pointer;
 }
