--- a/src/components/Calculator/styles.css
+++ b/src/components/Calculator/styles.css
@@ -1,8 +1,10 @@
 .Calculator {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr repeat(5, 48px);
+
   height: 320px;
   width: 235px;
   border-radius: 4px;
   overflow: hidden;
-
-  background-color: red;
 }
