--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -15,3 +15,20 @@
   outline: none;
   cursor: pointer;
 }
+
+.button:active {
+  background-color: #CCC;
+}
+
+.button.double {
+  grid-column: span 2;
+}
+
+.button.operation {
+  background-color: #FA8231;
+  color: #FFF;
+}
+
+.button.operation:active {
+  background-color: #FA8231CC;
+}
